corrección en imagenes de perfil

--- a/AppServSalud/src/main/resources/static/styles/main.css
+++ b/AppServSalud/src/main/resources/static/styles/main.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,400;1,900&display=swap');
 
 :root {
-    --verde-fondo: #rgba(164, 215, 164, 0.959);
+  --color-fondo-contenedores: rgba(164, 215, 164, 0.959);
+  --color-bordes: #DDD;
+  --color-titulos: #EE7734;
 }
 
 * {
@@ -16,7 +18,7 @@ body {
 }
 
 footer {
-  background-color: var(--verde-fondo);
+  background-color: var(--color-fondo-contenedores);
 }
 
 /* TARJETAS DE ESPECIALIDADES */
@@ -70,24 +72,98 @@ footer {
 }
 
 /* DASHBOARD PROFESIONAL */
-#dashboardProfesional{
-  #tablero{
+#dashboardProfesional {
+  #tablero {
     height: 100%;
   }
 
-  .dashboardProfesionalFragments , #DashboardPerfil{
-    background-color: rgba(164, 215, 164, 0.596); 
-    border: 1px solid #DDD;
+  .dashboardProfesionalFragments,
+  #DashboardPerfil {
+    background-color: var(--color-fondo-contenedores);
+    border: 1px solid var(--color-bordes);
     height: 100%;
   }
 
-  .dashboardContenedorOfertas{
+  .dashboardContenedorOfertas {
     max-height: 350px;
-   background-color: rgba(164, 215, 164, 0.75); 
-   border: 1px solid #DDD;
+    background-color: var(--color-fondo-contenedores);
+    border: 1px solid var(--color-bordes);
   }
 
-  .tablaTurnosProfesional{
-    background-color: rgba(164, 215, 164, 0.75); 
+  .tablaTurnosProfesional {
+    background-color: var(--color-fondo-contenedores);
+  }
+}
+
+/* INPUT DE FOTO DE PERFIL */
+#contenedor-imagen-perfil {
+  position: relative;
+  width: 200px;
+  height: 200px;
+
+  .imagen-redonda {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+
+}
+
+#contenedor-imagen-formulario {
+  position: relative;
+  width: 200px;
+  height: 200px;
+
+  .etiqueta-icono {
+    display: block;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    position: relative;
+  }
+
+  .imagen-redonda {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    transition: opacity 0.3s ease;
+  }
+
+  .input-imagen {
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+
+  .icono-modificar {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 24px;
+    display: none;
+  }
+}
+
+#contenedor-imagen-formulario:hover {
+  .etiqueta-icono::after {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .imagen-redonda {
+    opacity: 0.7;
+  }
+
+  .icono-modificar {
+    display: block;
   }
 }
