--- a/AppServSalud/src/main/resources/templates/fragments/head.html
+++ b/AppServSalud/src/main/resources/templates/fragments/head.html
@@ -2,9 +2,9 @@
   <meta charset="UTF-8">
   <title>Medi Ya</title>
   <meta
-    name="logoHouse.ico"
     content="width=device-width, initial-scale=1.0"
   >
+  <link rel="icon" th:href="@{/assets/clinica-img.png}" type="image/png">
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -36,8 +36,7 @@
     crossorigin="anonymous"
   ></script>
 
-  <script th:src="@{/js/dashProfesional.js}">
-
-  </script><script th:src="@{/js/notificaciones.js}"></script>
+  <script th:src="@{/js/dashProfesional.js}"></script>
+  <script th:src="@{/js/notificaciones.js}"></script>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </head>
