--- a/AppServSalud/src/main/resources/templates/turnosPaciente.html
+++ b/AppServSalud/src/main/resources/templates/turnosPaciente.html
@@ -19,6 +19,7 @@
                         <th>Aceptado por Profesional</th>
                         <th>Ubicacion</th>
                         <th>Precio</th>
+                        <th>Cancelar</th>
                     </tr>
                 </thead>
                 <tbody th:if="${turnos != null || !turnos.isEmpty}">
@@ -32,6 +33,11 @@
                         <td th:text="${turno.activoProfesional == true} ? 'Aceptado' : 'En Progreso'"></td>
                         <td th:text="${turno.oferta.ubicacion}"></td>
                         <td th:text="${turno.oferta.precio}"></td>
+                        <td>
+                            <a th:href="@{/turno/cancelarTurno/__${turno.id}__}">
+                                Cancelar Turno
+                            </a>
+                        </td>
                     </tr>
                 </tbody>
                 <tbody th:if="${turnos == null || turnos.isEmpty}">
