Modificación del texto en especialidades y tarjeta

--- a/AppServSalud/src/main/resources/templates/especialidades.html
+++ b/AppServSalud/src/main/resources/templates/especialidades.html
@@ -40,17 +40,13 @@
                                             class="texto-card-especialidad"
                                         >
                                             Cuenta con recursos tecnológicos de avanzada,
-                                            y especialistas con amplia experiencia y reconocida trayectoria
-                                            que nos permiten alcanzar los más altos estándares de calidad
-                                            en la prevención, diagnóstico y tratamiento de las enfermedades cardíacas.
+                                            y especialistas con amplia experiencia.
                                         </span>
                                         <span
                                             class="texto-card-especialidad-full d-none"
                                         >
                                             Cuenta con recursos tecnológicos de avanzada,
-                                            y especialistas con amplia experiencia y reconocida trayectoria
-                                            que nos permiten alcanzar los más altos estándares de calidad
-                                            en la prevención, diagnóstico y tratamiento de las enfermedades cardíacas.
+                                            y especialistas con amplia experiencia.
                                         </span>
                                     </p>
                                 </div>
@@ -76,9 +72,6 @@
                                             class="texto-card-especialidad"
                                         >
                                             El área de Clínica Médica está inspirado en una forma de ver la medicina con foco en el paciente y su familia.
-                                            Cuenta con profesionales de amplia experiencia y promueve su formación
-                                            médica continua con ateneos y cursos interdisciplinarios enfocados a mejorar el servicio y compromiso asumido. En el área ambulatoria
-                                            se brinda atención clínica integral y consultorio de atención post alta para pacientes recientemente externados que requieran control rápido antes de ver a su médico de cabecera.
                                         </span>
                                         <span
                                             class="texto-card-especialidad-full d-none"
@@ -86,15 +79,7 @@
                                             El área de Clínica Médica está inspirado en una forma de ver la medicina con
                                             foco en
                                             el paciente y su familia.
-                                            Cuenta con profesionales de amplia experiencia y promueve su formación
-                                            médica
-                                            continua con ateneos y cursos interdisciplinarios
-                                            enfocados a mejorar el servicio y compromiso asumido. En el área ambulatoria
-                                            se
-                                            brinda atención clínica integral y consultorio
-                                            de atención post alta para pacientes recientemente externados que requieran
-                                            control
-                                            rápido antes de ver a su médico de cabecera.
+                                            
                                         </span>
                                     </p>
                                 </div>
@@ -120,7 +105,7 @@
                                             class="texto-card-especialidad"
                                         >
                                             Excelencia médica y calidad al servicio de los más pequeños,
-                                            en un ambiente especialmente diseñado para ellos.
+                                            en un ambiente especialmente diseñado para ellos. 
                                         </span>
                                         <span
                                             class="texto-card-especialidad-full d-none"
@@ -152,26 +137,13 @@
                                             class="texto-card-especialidad"
                                         >
                                             Promueve el cuidado de la salud integral de la mujer.
-                                            Con profesionales altamente capacitados, logra satisfacer las demandas que
-                                            los
-                                            avances de las ciencias biomédicas y la tecnología imponen,
-                                            siempre dentro de un ambiente cálido de respeto a la paciente.
-                                            Cuenta con distintas secciones avocadas a la prevención primaria y
-                                            secundaria,
-                                            así
-                                            como también en el tratamiento de las enfermedades avanzadas.
+                                            
                                         </span>
                                         <span
                                             class="texto-card-especialidad-full d-none"
                                         >
                                             Promueve el cuidado de la salud integral de la mujer.
-                                            Con profesionales altamente capacitados, logra satisfacer las demandas que
-                                            los
-                                            avances de las ciencias biomédicas y la tecnología imponen,
-                                            siempre dentro de un ambiente cálido de respeto a la paciente.
-                                            Cuenta con distintas secciones avocadas a la prevención primaria y
-                                            secundaria, así
-                                            como también en el tratamiento de las enfermedades avanzadas.
+                                            
                                         </span>
                                     </p>
                                 </div>
