--- a/AppServSalud/src/main/resources/templates/tarjetaProfesional.html
+++ b/AppServSalud/src/main/resources/templates/tarjetaProfesional.html
@@ -7,6 +7,22 @@
     <body>
         <header th:replace="/fragments/header :: header"></header>
         <main>
+            <div class="container mt-3" >
+                <h1 style="color: #EE7734">Nuestros médicos: <span th:text="${especialidad}"></span></h1>
+                <p th:if="${especialidad == 'cardiologia'}">
+                    Cuenta con recursos tecnológicos de avanzada y especialistas con amplia experiencia y reconocida trayectoria que nos permiten alcanzar los más altos estándares de calidad en la prevención, diagnóstico y tratamiento de las enfermedades cardíacas.
+                </p>
+                <p th:if="${especialidad == 'pediatria'}">
+                    Excelencia médica y calidad al servicio de los más pequeños, en un ambiente especialmente diseñado para ellos. Nuestro equipo altamente calificado combina experiencia médica con un enfoque cálido y familiar.
+                </p>
+                <p th:if="${especialidad == 'ginecologia'}">
+                    Promueve el cuidado de la salud integral de la mujer. Con profesionales altamente capacitados, logra satisfacer las demandas que los avances de las ciencias biomédicas y la tecnología imponen, siempre dentro de un ambiente cálido, de respeto a la paciente. Cuenta con distintas secciones avocadas a la prevención primaria y secundaria, así como también en el tratamiento de las enfermedades avanzadas.
+                </p>
+                <p th:if="${especialidad == 'clinica'}">
+                    El área de Clínica Médica está inspirado en una forma de ver la medicina con foco en el paciente y su familia. Cuenta con profesionales de amplia experiencia de formación médica continua por medio de ateneos y cursos interdisciplinarios enfocados a mejorar el servicio y compromiso asumido. En el área ambulatoria se brinda atención clínica integral y consultorios de atención para pacientes recientemente externados que requieran control inmediato antes de ver a su médico de cabecera.
+                </p> 
+            </div>
+            
             <div class="container mt-5 mb-5">
                 <div class="row justify-content-center align-items-center">
                     <div
